test/log/load/vgldcb3_v_i16_m.txt
vgldcb3_v_i16_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vgldcb3_v_i16_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vgldcb3_v_i16_m.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vgldcb3_v_i16_m.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vgldcb3_v_i16_m.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vgldcb3_v_i16_m.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vgldcb3_v_i16_m.c:29:6: warning: no previous prototype for 'vgldcb3_v_i16_m_golden' [-Wmissing-prototypes]
   29 | void vgldcb3_v_i16_m_golden(bool32_t *mask,int16_t maskoff,int16_t *base,int16_t index,int16_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vgldcb3_v_i16_m.c: In function 'vgldcb3_v_i16_m_golden':
vgldcb3_v_i16_m.c:29:39: warning: unused parameter 'mask' [-Wunused-parameter]
   29 | void vgldcb3_v_i16_m_golden(bool32_t *mask,int16_t maskoff,int16_t *base,int16_t index,int16_t exp_result[][ELE_NUM]) {
      |                             ~~~~~~~~~~^~~~
vgldcb3_v_i16_m.c:29:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   29 | void vgldcb3_v_i16_m_golden(bool32_t *mask,int16_t maskoff,int16_t *base,int16_t index,int16_t exp_result[][ELE_NUM]) {
      |                                            ~~~~~~~~^~~~~~~
vgldcb3_v_i16_m.c:29:82: warning: unused parameter 'index' [-Wunused-parameter]
   29 | void vgldcb3_v_i16_m_golden(bool32_t *mask,int16_t maskoff,int16_t *base,int16_t index,int16_t exp_result[][ELE_NUM]) {
      |                                                                          ~~~~~~~~^~~~~
vgldcb3_v_i16_m.c: In function 'main':
vgldcb3_v_i16_m.c:54:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   54 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vgldcb3_v_i16_m.c:22:15: error: subscripted value is neither array nor pointer nor vector
   22 |              a[i] = random(threshold); \
      |               ^
vgldcb3_v_i16_m.c:55:5: note: in expansion of macro 'data_init'
   55 |     data_init(maskoff, exp_maskoff, 32*3, 0xffff);
      |     ^~~~~~~~~
vgldcb3_v_i16_m.c:23:22: error: subscripted value is neither array nor pointer nor vector
   23 |              b[i] = a[i]; \
      |                      ^
vgldcb3_v_i16_m.c:55:5: note: in expansion of macro 'data_init'
   55 |     data_init(maskoff, exp_maskoff, 32*3, 0xffff);
      |     ^~~~~~~~~
vgldcb3_v_i16_m.c:66:28: warning: passing argument 1 of 'vgldcb3_v_i16_m_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   66 |     vgldcb3_v_i16_m_golden(exp_mask,exp_maskoff,exp_base,exp_index,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vgldcb3_v_i16_m.c:29:39: note: expected 'bool32_t *' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   29 | void vgldcb3_v_i16_m_golden(bool32_t *mask,int16_t maskoff,int16_t *base,int16_t index,int16_t exp_result[][ELE_NUM]) {
      |                             ~~~~~~~~~~^~~~
vgldcb3_v_i16_m.c:66:37: warning: passing argument 2 of 'vgldcb3_v_i16_m_golden' makes integer from pointer without a cast [-Wint-conversion]
   66 |     vgldcb3_v_i16_m_golden(exp_mask,exp_maskoff,exp_base,exp_index,exp_result);
      |                                     ^~~~~~~~~~~
      |                                     |
      |                                     int16_t * {aka short int *}
vgldcb3_v_i16_m.c:29:52: note: expected 'int16_t' {aka 'short int'} but argument is of type 'int16_t *' {aka 'short int *'}
   29 | void vgldcb3_v_i16_m_golden(bool32_t *mask,int16_t maskoff,int16_t *base,int16_t index,int16_t exp_result[][ELE_NUM]) {
      |                                            ~~~~~~~~^~~~~~~
vgldcb3_v_i16_m.c:66:58: warning: passing argument 4 of 'vgldcb3_v_i16_m_golden' makes integer from pointer without a cast [-Wint-conversion]
   66 |     vgldcb3_v_i16_m_golden(exp_mask,exp_maskoff,exp_base,exp_index,exp_result);
      |                                                          ^~~~~~~~~
      |                                                          |
      |                                                          int16_t * {aka short int *}
vgldcb3_v_i16_m.c:29:82: note: expected 'int16_t' {aka 'short int'} but argument is of type 'int16_t *' {aka 'short int *'}
   29 | void vgldcb3_v_i16_m_golden(bool32_t *mask,int16_t maskoff,int16_t *base,int16_t index,int16_t exp_result[][ELE_NUM]) {
      |                                                                          ~~~~~~~~^~~~~
vgldcb3_v_i16_m.c:66:68: warning: passing argument 5 of 'vgldcb3_v_i16_m_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   66 |     vgldcb3_v_i16_m_golden(exp_mask,exp_maskoff,exp_base,exp_index,exp_result);
      |                                                                    ^~~~~~~~~~
      |                                                                    |
      |                                                                    int16_t * {aka short int *}
vgldcb3_v_i16_m.c:29:96: note: expected 'int16_t (*)[32]' {aka 'short int (*)[32]'} but argument is of type 'int16_t *' {aka 'short int *'}
   29 | void vgldcb3_v_i16_m_golden(bool32_t *mask,int16_t maskoff,int16_t *base,int16_t index,int16_t exp_result[][ELE_NUM]) {
      |                                                                                        ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgldcb3_v_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vgldcb3_v_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vgldcb3_v_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgldcb3_v_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed